# auditwheel-emscripten

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
auditwheel_emscripten/: __init__.py  exports.py  function_type.py  imports.py  lib_utils.py  module.py  repair.py  show.py  utils.py  wasm_utils.py  wheel_utils.py
auditwheel_emscripten/cli/: main.py
auditwheel_emscripten/emscripten_tools/: diagnostics.py  utils.py  webassembly.py
test/: paths.py  test_exports.py  test_function_type.py  test_imports.py  test_repair.py  test_show.py  test_utils.py  test_wheel_utils.py
test/test_data/: libgeos_c.so.1
