[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "auditwheel-emscripten"
authors = [{name = "Gyeongjae Choi", email = "def6488@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "leb128",
]

[project.urls]
Home = "https://github.com/ryanking13/auditwheel-emscripten"
