[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "auditwheel_emscripten"
authors = [{name = "Gyeongjae Choi", email = "def6488@gmail.com"}]
readme = "README.md"
description = "auditwheel-like tool for Pyodide"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "leb128",
    "packaging",
    "pyodide-cli",
    "typer[all]",
    "wheel",
]

[project.urls]
Home = "https://github.com/ryanking13/auditwheel-emscripten"

[project.entry-points."pyodide.cli"]
audit = "auditwheel_emscripten.cli.main:app"
