[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "auditwheel_emscripten"
authors = [{name = "Gyeongjae Choi", email = "def6488@gmail.com"}]
readme = "README.md"
description = "auditwheel-like tool for Pyodide"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "leb128",
    "packaging",
    "pyodide-cli",
    "typer",
    "wheel",
]
license.file = "LICENSE"

[project.optional-dependencies]
test = [
  "pytest",
]


[project.urls]
Home = "https://github.com/pyodide/auditwheel-emscripten"

[project.entry-points."pyodide.cli"]
auditwheel = "auditwheel_emscripten.cli.main:app"

[tool.hatch.version]
source = "vcs"
